# Scrapbook

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  README.md  build.cmd  launch.cmd  package.cmd
apps/scrapbook/: CMakeLists.txt
apps/scrapbook/qml/: Main.qml
apps/scrapbook/src/: fixturepipelinecontroller.cpp  fixturepipelinecontroller.h  main.cpp  reviewgroupmodel.cpp  reviewgroupmodel.h  reviewmembermodel.cpp  reviewmembermodel.h
scripts/: Package-Scrapbook.ps1  Run-Scrapbook.ps1
tools/scrapbook_pipeline/: CMakeLists.txt
tools/scrapbook_pipeline/src/: main.cpp  pipelinerunner.cpp  pipelinerunner.h
